--- a/assets/stylesheets/scss/_pages.erb.scss
+++ b/assets/stylesheets/scss/_pages.erb.scss
@@ -79,6 +79,7 @@ Header
 .login-bar, .user-bar{
   border-bottom: 2px solid $grey-1;
    // box-shadow: 0 1px 2px rgba($grey-2, 0.5);
+   box-shadow: 0 0 2px #f6f6f6;
 }
 
 .input-login {
