text and layout changes

--- a/assets/stylesheets/scss/_pages.erb.scss
+++ b/assets/stylesheets/scss/_pages.erb.scss
@@ -244,8 +244,9 @@ grid-section content LogIn page
 //   max-width: 596px;
 // }
 
-.serachEngine-text-welcome-page{
+.searchEngine-text-welcome-page{
   margin-top: 2.5rem;
+  margin-bottom: 0.8rem;
   font-size: 1rem;
 }
 
@@ -258,7 +259,7 @@ grid-section content LogIn page
     padding-left:2rem;
     padding-right:2rem;
   }
-  margin-top: 3.5rem;
+  margin-top: 2.5rem;
 }
 
 
