--- a/assets/stylesheets/scss/_pard.erb.scss
+++ b/assets/stylesheets/scss/_pard.erb.scss
@@ -76,9 +76,9 @@ main {
   padding-top:1.8rem;
   padding-bottom:1.8rem;
   min-height: 75vh;
-  // @include breakpoint(small down){
-  //   padding-top:2.2rem;
-  // }
+  @include breakpoint(small down){
+    padding-top:1.6rem;
+  }
 }
 
 a, a:active, a:visited, a:hover {
@@ -436,7 +436,7 @@ button{
   width: 100%;
   height: 3rem;
   @include border-radius($element-border-radius);
-  background: rgb(56, 133, 255);
+  background: $blue-pard;
 }
 
 .signupButton{
@@ -449,7 +449,7 @@ button{
   font-weight: bold;
   padding: 0.3rem 0.65rem;
   @include border-radius($element-border-radius);
-  background: rgb(56, 133, 255);
+  background: $blue-pard;
   font-size: $almostNormalSize;
   position:absolute;
   top: 0.2rem;
@@ -482,7 +482,7 @@ button{
   padding-bottom:1rem;
   @include border-radius($element-border-radius);
   font-size: $almostNormalSize;
-  background: rgb(56, 133, 255);
+  background: $blue-pard;
   position: relative;
   margin: auto;
   display: block;
@@ -839,6 +839,7 @@ FOOTER
 
 .footer-text-link{
   margin-right:2rem;
+  display: inline-block;
 }
 
 @media only screen and #{breakpoint(medium)} {
@@ -1245,3 +1246,31 @@ SEARCH
 .select2-container .select2-selection--multiple{
   border-radius: $element-border-radius;
 }
+
+
+
+.select2-selection.select2-selection--multiple{
+  // padding:0.2rem;
+  font-size: 1rem;
+  min-height: 2.6rem;
+  // border-color: 
+  // box-shadow: 0 0px 1px $blue-pard;
+}
+
+// .select2-selection.select2-selection--multiple:focus{
+//   border-color: $blue-pard;
+// }
+
+// .select2-selection.select2-selection--multiple:focus{
+//   box-shadow: 0 0 4px $blue-pard;
+// }
+
+.select2-search.select2-search--inline input{
+  height: auto;
+  margin:0;
+}
+
+.select2-selection__rendered li{
+  padding-top: 5px;
+}
+
