--- a/assets/stylesheets/scss/_pages.erb.scss
+++ b/assets/stylesheets/scss/_pages.erb.scss
@@ -248,6 +248,8 @@ grid-section content LogIn page
   margin-top: 2.5rem;
   margin-bottom: 0.8rem;
   font-size: 1rem;
+  font-weight: bold;
+  text-align: center;
 }
 
 .search-results{
@@ -331,9 +333,17 @@ Aside content User page
 
 .create-profile-text, .myProfile-text{
   text-transform: uppercase;
-  margin-top: 1.5rem;
   padding: 0 $inner-spacing;
   margin-bottom: 0.5rem;
+}
+
+.create-profile-text{
+  margin-top: 0.75rem;
+}
+
+.myProfile-text{
+  margin-top: 1rem;
+  margin-bottom: -0.6rem;
 }
 
 
@@ -353,19 +363,10 @@ User Section
 
 .grid-section-contentTitle{
   display: block;
-  // width: 100%;
-  // text-align: center;
   position: relative;
   margin-bottom:2.2rem;
-  margin-top: -0.2rem
-
-
-  // color: $title-color;
-  // @include breakpoint(medium){
-  // margin-top: 2rem;
-  // margin-bottom: 3rem;}
-  // @include breakpoint(small down){
-  // margin-bottom: 5vw;}
+  margin-top: 1rem;
+  text-align: center;
 } 
 
 
