--- a/assets/stylesheets/scss/_pages.erb.scss
+++ b/assets/stylesheets/scss/_pages.erb.scss
@@ -194,32 +194,32 @@ grid-section content LogIn page
 
 
 
-.filter-select{
-  display: inline-block;
-  width:10.3rem;
-  text-align: center;
-  background-color: $content-background;
-  margin-right:0.3rem;
-}
+// .filter-select{
+//   display: inline-block;
+//   width:10.3rem;
+//   text-align: center;
+//   background-color: $content-background;
+//   margin-right:0.3rem;
+// }
 
-.search-input{
-  height: auto;
-  font-size: $almostNormalSize;
-  display: inline-block;
-  width: 84%;
-  margin:0;
-}
+// .search-input{
+//   height: auto;
+//   font-size: $almostNormalSize;
+//   display: inline-block;
+//   width: 84%;
+//   margin:0;
+// }
 
-.search-btn{
-  display: inline;
-  padding: 0.5rem;
-  font-weight: 600;
-  font-size: $almostNormalSize;
-  @extend .pard-btn;
-  margin:0;
-  width:15%;
+// .search-btn{
+//   display: inline;
+//   padding: 0.5rem;
+//   font-weight: 600;
+//   font-size: $almostNormalSize;
+//   @extend .pard-btn;
+//   margin:0;
+//   width:15%;
 
-}
+// }
 
 .ui-widget{
   display: inline-block;
@@ -951,6 +951,7 @@ OUTSIDER PAGE
 
   .outsider-main{
     margin-top: 5rem;
+    margin-bottom: 2.2rem;
   }
 
 }
