--- a/assets/stylesheets/scss/_pard.erb.scss
+++ b/assets/stylesheets/scss/_pard.erb.scss
@@ -1271,8 +1271,10 @@ SEARCH
   // padding:0.2rem;
   font-size: 1rem;
   min-height: 2.6rem;
-  width: 84%;
-  margin-left: 3.6rem;
+  @include breakpoint(large){ 
+    width: 84%;
+    margin-left: 3.6rem;
+  }
   // border-color: 
   // box-shadow: 0 0px 1px $blue-pard;
 }
