--- a/views/layout.erb
+++ b/views/layout.erb
@@ -5,7 +5,13 @@
     <title>orfheo</title>
  		<meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="La primera plataforma para comunidades artístico-culturales donde conocer los proyectos cercanos, encontrarse y crear juntos." />
+    <meta name="keywords" content="convocatoria, conFusión, festival, Benimaclet, valencia, arte, artistas, espacios, asociaciones, música, taller, artes escénicas, exposición, comunidad, cultura, plataforma, social, network, gestión, cultural" />
+    <meta name="robots" content="index, follow" />
+    <meta name="author" content="orfheo community project" />
+    
     <link rel='shortcut icon' href="https://upload.wikimedia.org/wikipedia/commons/d/d7/Byrcolorwheel.png" type='image/png'/ >
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
