some popup design and project info popup content

--- a/assets/stylesheets/scss/_pages.erb.scss
+++ b/assets/stylesheets/scss/_pages.erb.scss
@@ -14,11 +14,17 @@ LOGIN PAGE
 .register-form-final-mex{
   font-size: $almostNormalSize;
   margin-top: 2rem;
+  p {
+    font-size: 1rem;
+  }
 }
 
 .register-form-init-mex{
   font-size: $almostNormalSize;
   margin-bottom: 2rem;
+  p {
+    font-size: 1rem;
+  }
 }
 
 .welcome-img-section-header {
