--- a/assets/stylesheets/scss/_pard.erb.scss
+++ b/assets/stylesheets/scss/_pard.erb.scss
@@ -906,6 +906,22 @@ a.footer-text-link:hover{
 }
 
 
+.title-project-info{
+  text-align: center;
+  margin-bottom: 2rem;
+  font-weight: bold;
+}
+
+.part2-message-project-info ul{
+  margin-top: -0.5rem; 
+}
+
+.subtitle-project-info{
+  font-weight: bold;
+  margin-top: 2rem;
+  margin-bottom: 1rem;
+}
+
 
 
 
