--- a/assets/stylesheets/scss/_pard.erb.scss
+++ b/assets/stylesheets/scss/_pard.erb.scss
@@ -922,6 +922,15 @@ a.footer-text-link:hover{
   margin-bottom: 1rem;
 }
 
+.conditions-lastModify {
+  text-decoration: underline;
+  margin-bottom: 1.5rem;
+}
+
+.conditions-par{
+  margin-bottom: 1.5rem;
+}
+
 
 
 
