--- a/assets/stylesheets/scss/_pard.erb.scss
+++ b/assets/stylesheets/scss/_pard.erb.scss
@@ -931,6 +931,26 @@ a.footer-text-link:hover{
   margin-bottom: 1.5rem;
 }
 
+.orfheo-symbol-popup{
+  background-image: url(<%= image_path 'orfheosimbolocolor.png' %>);
+  width: 100px;
+  height: 69px;
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  @include horizontal-center;
+  position: relative;
+  margin-top: 3rem;
+  margin-bottom: 2rem;
+
+}
+
+
+.orfeo-web-popup{
+  text-align: center;  
+  margin-bottom: 4rem;
+
+}
+
 
 
 
