--- a/views/layout.erb
+++ b/views/layout.erb
@@ -12,7 +12,8 @@
     <meta name="robots" content="index, follow" />
     <meta name="author" content="orfheo community project" />
     
-    <link rel='shortcut icon' href="https://upload.wikimedia.org/wikipedia/commons/d/d7/Byrcolorwheel.png" type='image/png'/ >
+    <link rel='shortcut icon' href="<%= image_path 'orfheoiconocolor.png' %>" type='image/png'/ >
+
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
