--- a/assets/stylesheets/scss/_pard.erb.scss
+++ b/assets/stylesheets/scss/_pard.erb.scss
@@ -1123,8 +1123,15 @@ select, textarea, a{
   }
 
   .category-SpaceForm, .category-modifyProfile{
-    margin-top: 1.8rem;
-    margin-bottom: -0.8rem;
+    margin-top: 2.5rem;
+  }
+
+  .name-SpaceForm, .address-SpaceForm, .personal_web-SpaceForm, .links-SpaceForm{
+    margin-bottom: 1.5rem;
+  }
+
+  .color-SpaceForm{
+    margin-bottom: 1.8rem;
   }
 
   .phone-SpaceCall, .phone-ArtistCall{
@@ -1138,9 +1145,14 @@ select, textarea, a{
     }
   }
 
+  .phone-SpaceCall{
+    margin-bottom: 2rem;
+    margin-top: 2rem; 
+  }
+
   .availability-SpaceCall{
-    margin-bottom: 1.5rem;
-    margin-top: 1.5rem; 
+    margin-bottom: 2rem;
+    margin-top: 2rem; 
     // width: 24rem;
     input{
       width: 21rem;
@@ -1162,7 +1174,7 @@ select, textarea, a{
 
   .responsible-SpaceCall{
     margin-bottom: 1.5rem;
-    margin-top: 1.2rem; 
+    margin-top: 2rem; 
     input{
       width: 19rem;
       display: inline-block;
