new classes added to modify profile and production form and some ortographic corretion

--- a/assets/stylesheets/scss/_pard.erb.scss
+++ b/assets/stylesheets/scss/_pard.erb.scss
@@ -944,7 +944,6 @@ a.footer-text-link:hover{
 
 }
 
-
 .orfeo-web-popup{
   text-align: center;  
   margin-bottom: 4rem;
@@ -1038,14 +1037,21 @@ select, textarea, a{
 
 .init-message-form{
   margin-bottom: 2rem;
-  font-size: $almostNormalSize;
+  // font-size: $almostNormalSize;
 }
 
 .final-message-form{
-  margin-top: 2rem;
+  margin-top: 2.5rem;
   margin-bottom: 2rem;
   color: red;
-  font-size:$almostNormalSize;
+  // font-size:$almostNormalSize;
+}
+
+.final-message-form-modifyProduction{
+  margin-bottom: 2rem;
+  margin-top: 0.5rem;
+  color: red;
+  // font-size:$almostNormalSize;
 }
 
 .title-part{
@@ -1216,21 +1222,37 @@ select, textarea, a{
     display: inline-block;
     margin-left: 4rem;
     position: absolute;
-    margin-top: -0.4rem;  
+    margin-top: 0.8rem;  
   }
 
   .name-modifyProfile{
     width: 17rem;
-    display: inline-block;
+    display: inline-block;  
+    margin-top: 1.2rem;    
+  }
+
+  .color-modifyProfile{
+    margin-top: 2rem;
+  }
+
+  .address-modifyProfile{
+    margin-top: -0.5rem;
+  }
+
+  .artist-modifyProfile .bio-modifyProfile {
+    margin-top: -0.5rem;
   }
 
 }
+
+
+
 
 .deleteProfile-caller{
   font-size: $smallSize;
 }
 
-.field-ArtistCall{
+.field-ArtistCall, .field-modifyProduction{
   margin-bottom: 1.5rem;
 }
 
