--- a/assets/stylesheets/scss/_pages.erb.scss
+++ b/assets/stylesheets/scss/_pages.erb.scss
@@ -41,8 +41,8 @@ LOGIN PAGE
 .logo-header{
   cursor: pointer;
   background-image: url(<%= image_path 'orfheologocolor.png' %>);
-  width: 125px;
-  height: 42px;
+  width: 110px;
+  height: 37px;
   background-repeat: no-repeat;
   background-size: 100% 100%;
   @include breakpoint(small down){ 
@@ -50,6 +50,12 @@ LOGIN PAGE
     height: 22px;
     margin-top:0.3rem;
     margin-bottom:0.7rem;
+  }
+}
+
+.inside-header-logo{
+  @include breakpoint(large){ 
+    margin-top:0.5rem;
   }
 }
 
@@ -735,7 +741,7 @@ Production Section
   position: relative;
   width: 100%;
   padding: 0 $inner-spacing;
-  margin-bottom:2rem;
+  margin-bottom:1rem;
 }
 
 .multimedia-container .video-production-container iframe{
@@ -755,7 +761,7 @@ Production Section
 
 
 .video-title-box{
-  border: 1px solid $grey-2;
+  border-bottom: 1px solid $grey-2;
   padding-top:0.8rem;
   padding-bottom:0.8rem; 
   width: 100%;
@@ -810,9 +816,9 @@ Production Section
 }
 
 .images-title-box{
-  border: 1px solid $grey-2;
-  padding-top:1.5rem;
-  padding-bottom:1.5rem; 
+  border-bottom: 1px solid $grey-2;
+  // padding-top:1.5rem;
+  padding-bottom:0.6rem; 
   width: 96%;
 }
 
@@ -835,7 +841,7 @@ Production Section
    -moz-column-count: 2; /* Firefox */
    column-count: 2;}
   padding: 0 $inner-spacing;
-  margin-bottom: 2rem;
+  margin-bottom: 0.5rem;
 }
 
 .single-image-content span{
