facebook meta tags

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:fb="http://ogp.me/ns/fb#">
 
 	<head>
     <title>orfheo</title>
@@ -11,7 +11,14 @@
     <meta name="keywords" content="orfheo, convocatoria, conFusión, festival, Benimaclet, valencia, arte, artistas, espacios, asociaciones, música, taller, artes escénicas, exposición, comunidad, cultura, plataforma, social, network, gestión, cultural" />
     <meta name="robots" content="index, follow" />
     <meta name="author" content="orfheo community project" />
-    
+
+    <!-- fb preview meta tags -->
+    <meta property="og:image" content="<%= image_path 'orfheosimbolocolor.png' %>"/>     <!-- img 1200 x 630 (alto x ancho) -->
+    <meta property="og:title" content="Orfheo"/>
+    <meta property="og:url" content="http://www.orfheo.org/"/>
+    <meta property="og:site_name" content="Orfheo"/>
+    <!-- ... -->
+
     <link rel='shortcut icon' href="<%= image_path 'orfheoiconocolor.png' %>" type='image/png'/ >
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
