call page - types selector and checkBoxes

--- a/assets/stylesheets/scss/_pages.erb.scss
+++ b/assets/stylesheets/scss/_pages.erb.scss
@@ -953,3 +953,26 @@ OUTSIDER PAGE
   }
 
 }
+
+
+
+/*===============================================
+CALL PAGE
+================================================*/
+
+
+.main-call-page{
+  background: $grey-1;
+
+}
+
+.call-section{
+  background: white;
+  padding: $inner-spacing;
+}
+
+.checkBox-call-manager{
+  display: inline-block;
+  width: 20%;
+}
+
