--- a/views/layout.erb
+++ b/views/layout.erb
@@ -15,8 +15,12 @@
     <!-- fb preview meta tags -->
     <meta property="og:image" content="<%= image_path 'orfheosimbolocolor.png' %>"/>     <!-- img 1200 x 630 (alto x ancho) -->
     <meta property="og:title" content="Orfheo"/>
-    <meta property="og:url" content="http://www.orfheo.org/"/>
-    <meta property="og:site_name" content="Orfheo"/>
+    <meta property="og:url" content="http://www.orfheo.org"/>
+    <meta property="og:site_name" content="orfheo"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:description" content="Orfheo es la primera plataforma para comunidades artístico-culturales donde conocer los proyectos cercanos, encontrarse y crear juntos."/>
+
+
     <!-- ... -->
 
     <link rel='shortcut icon' href="<%= image_path 'orfheoiconocolor.png' %>" type='image/png'/ >
