--- a/assets/stylesheets/scss/_pages.erb.scss
+++ b/assets/stylesheets/scss/_pages.erb.scss
@@ -978,8 +978,7 @@ CALL PAGE
 
 .table-proposal {
   font-size: 12px;
-  overflow-x: scroll;
-}
+  }
 
 .table-proposal .title-row-table-proposal {
   font-size: 14px;
@@ -989,5 +988,11 @@ CALL PAGE
 .table-box-proposal-manager{
   overflow: auto;
   max-height: 95vh;
+  margin-top: 2rem;
+  border: 1px solid $grey-3;
+}
+
+.types-selector-call-manager{
+  margin-bottom: 2rem;
 }
 
