--- a/assets/stylesheets/scss/_pages.erb.scss
+++ b/assets/stylesheets/scss/_pages.erb.scss
@@ -973,7 +973,7 @@ CALL PAGE
 
 .checkBox-call-manager{
   display: inline-block;
-  width: 20%;
+  width: 25%;
 }
 
 .table-proposal {
@@ -994,5 +994,6 @@ CALL PAGE
 
 .types-selector-call-manager{
   margin-bottom: 2rem;
+  margin-top: 2rem;
 }
 
