reoerder, link to profile page  and category dictionary

--- a/assets/stylesheets/scss/_pages.erb.scss
+++ b/assets/stylesheets/scss/_pages.erb.scss
@@ -997,3 +997,10 @@ CALL PAGE
   margin-top: 2rem;
 }
 
+.title-colText-call-manager{
+  cursor: pointer;
+}
+
+.icon-column-call-table{
+  width: 2rem;
+}
