table disappear if nothing selected

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -13,8 +13,8 @@
     <meta name="author" content="orfheo community project" />
 
     <!-- fb preview meta tags -->
-    <meta property="og:image" content="<%= image_path 'orfheosimbolocolor.png' %>"/>     <!-- img 1200 x 630 (alto x ancho) -->
-    <meta property="og:title" content="Orfheo"/>
+    <meta property="og:image" content="http://www.orfheo.org/assets/orfheosimbolocolor-afd9c7014f0b56ba7ca44c134c701a84.png"/>     <!-- img 1200 x 630 (alto x ancho) -->
+    <meta property="og:title" content="orfheo"/>
     <meta property="og:url" content="http://www.orfheo.org"/>
     <meta property="og:site_name" content="orfheo"/>
     <meta property="og:type" content="website"/>
