--- a/assets/stylesheets/scss/_pard.erb.scss
+++ b/assets/stylesheets/scss/_pard.erb.scss
@@ -715,12 +715,18 @@ Profile Card
 
 .position-profileCard-login{
   position:relative;
-	margin-top:0.8rem;
+	margin-top:0.9rem;
   margin-bottom: 1rem; 
   @include breakpoint(small down) {
   // @include horizontal-center;
   position:relative;
   }
+}
+
+.card-container{
+  display: inline-block;
+  display: inline-block;
+  padding: 0 1.065rem;
 }
 
 .photo-container-card{
@@ -1408,7 +1414,8 @@ SEARCH
 
 .search-input{
   @include breakpoint(large){ 
-    width: 84%;
-    margin-left: 3.6rem;
+    width: 100%;
+    padding-left:3.8rem;
+    padding-right: 3.8rem;
   }
 }
