places and dayTime select2 ro make program

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -13,7 +13,8 @@
     <meta name="author" content="orfheo community project" />
 
     <!-- fb preview meta tags -->
-    <meta property="og:image" content="http://www.orfheo.org/assets/orfheosimbolocolor-afd9c7014f0b56ba7ca44c134c701a84.png"/>     <!-- img 1200 x 630 (alto x ancho) -->
+    <meta property="og:image:url" content="<%= image_path 'orfheo_fb_preview.jpg' %>"/>     <!-- img 1200 x 630 (alto x ancho) -->
+    <meta property="og:image:type" content="image/jpg">
     <meta property="og:title" content="orfheo"/>
     <meta property="og:url" content="http://www.orfheo.org"/>
     <meta property="og:site_name" content="orfheo"/>
