--- a/assets/stylesheets/scss/_pages.erb.scss
+++ b/assets/stylesheets/scss/_pages.erb.scss
@@ -990,7 +990,7 @@ CALL PAGE
   font-weight: bold;
 }
 
-.table-box-proposal-manager{
+#table-box-proposal-manager{
   overflow: auto;
   max-height: 95vh;
   margin-top: 2rem;
