color picker js

--- a/assets/stylesheets/scss/app.scss
+++ b/assets/stylesheets/scss/app.scss
@@ -6,6 +6,9 @@
 @import 'foundation';
 @import 'motion-ui';
 @import 'jquery.datepick';
+@import 'spectrum';
+// @import 'layout';
+
 // @import 'fontello/css/fontello';
 @import 'fontello/css/fontello-embedded';
 
