--- a/views/layout.erb
+++ b/views/layout.erb
@@ -7,7 +7,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Orfheo es la primera plataforma para comunidades artístico-culturales donde conocer los proyectos cercanos, encontrarse y crear juntos." />
+    <meta name="description" content="Orfheo es la primera comunidad artístico-culturales donde conocer proyectos, encontrarse y crear juntos experiencias inolvidables." />
     <meta name="keywords" content="orfheo, convocatoria, conFusión, festival, Benimaclet, valencia, arte, artistas, espacios, asociaciones, música, taller, artes escénicas, exposición, comunidad, cultura, plataforma, social, network, gestión, cultural" />
     <meta name="robots" content="index, follow" />
     <meta name="author" content="orfheo community project" />
