--- a/assets/stylesheets/scss/_pard.erb.scss
+++ b/assets/stylesheets/scss/_pard.erb.scss
@@ -13,7 +13,7 @@ $tinySize: 7px
 small:80% -> 12.8px / 0.8rem
 
  */ 
-
+ 
 // html, body, div, span, applet, object, iframe,
 // h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 // a, abbr, acronym, address, big, cite, code,
@@ -1422,4 +1422,24 @@ SEARCH
     padding-left:3.8rem;
     padding-right: 3.8rem;
   }
+}
+
+
+
+/*===============================================
+COLOR PICKER
+================================================*/
+
+.sp-dd{
+  display: none;
+}
+
+.sp-preview{
+  width: 100%;
+  height: 1.5rem;
+}
+
+.sp-replacer{
+  width: 100%;
+  margin-bottom: 1rem;
 }
