--- a/assets/stylesheets/scss/_settings.scss
+++ b/assets/stylesheets/scss/_settings.scss
@@ -70,7 +70,7 @@ $title-color: #757373;
 $text-color: #A0A09F;
 $blue-pard: rgb(56, 133, 255);
 $blue-pard-hover: rgba(56, 133, 255, 0.8);
-
+$green-pard: rgb(76, 182, 50);
 
 
 //fonts
