proposal popup when clicking on name

--- a/assets/stylesheets/scss/_pard.erb.scss
+++ b/assets/stylesheets/scss/_pard.erb.scss
@@ -954,10 +954,16 @@ a.footer-text-link:hover{
 
 }
 
-.orfeo-web-popup{
+.orfheo-web-popup{
   text-align: center;  
   margin-bottom: 4rem;
 
+}
+
+.orfheo-baseline-popup{
+  text-align: center;  
+  margin-bottom: 4rem;
+  margin-top: -1rem;
 }
 
 
