new design call page

--- a/assets/stylesheets/scss/_pages.erb.scss
+++ b/assets/stylesheets/scss/_pages.erb.scss
@@ -98,11 +98,8 @@ Header
   }
   .login-bar, .user-bar{
   border-bottom: 2px solid $grey-1;
-   // box-shadow: 0 1px 2px rgba($grey-2, 0.5);
    box-shadow: 0 0 2px #f6f6f6;
-}
-
-
+  }
 }
 
 /*GENERAL*/
@@ -237,11 +234,6 @@ grid-section content LogIn page
   margin-top: 1rem;
 }
 
-// .box-content input{
-//   @include horizontal-center;
-//   position: relative;
-//   max-width: 596px;
-// }
 
 .searchEngine-text-welcome-page{
   margin-top: 2.5rem;
@@ -276,8 +268,7 @@ USER PAGE
 Header
 -------------------*/
 
-//GENERAL
-
+/* GENERAL*/
 
 .right-user-header-content{
   display: inline-block;
@@ -400,7 +391,6 @@ Aside
 .name-column{
   padding: 0rem 0.2rem 0rem 0.2rem;
   width: 8.2rem;
-  // font-size: $smallSize;
 }
 
 
@@ -437,9 +427,6 @@ Aside
   @include vertical-align();
 }
 
-// .production-icon-container{
-//   // height:2.2rem;
-// }
 
 .profile-selected-container{
   background: $grey-1;
@@ -474,8 +461,6 @@ Aside
   cursor: pointer;
 }
 
-// .profile-nav-production-name
-
 
 .nav-list-container{
   margin-top: 0.3rem;
@@ -483,7 +468,6 @@ Aside
 }
 
 .nav-icon-production-container{
-  // height: 2.2rem;
   width: 2.2rem;
 }
 
@@ -512,10 +496,6 @@ Aside
 }
 
 
-// .text-link{
-//   text-decoration: underline;
-// }
-
 .text-link-profile-nav{
   font-weight: bold;
 }
@@ -523,7 +503,6 @@ Aside
 
 
 .selected-element{
-  // text-decoration: underline;
   font-weight: bold;
 }
 
@@ -607,7 +586,6 @@ Profile Section
 
 .info-icon-title-box {
   font-size: 1.2rem;
-  // vertical-align: -0.2rem;
 }
 
 .information-bio, .information-contact{
@@ -644,7 +622,6 @@ Profile Section
     width: -moz-calc(100% - 2.8rem);
     width: -webkit-calc(100% - 2.8rem);
     width: calc(100% - 2.8rem);
-    // width: 14.2rem
   };
   line-height: 1.3rem;
   vertical-align: -0.2rem;
@@ -691,15 +668,6 @@ Profile Section
   display: inline-block;
 }
 
-// .myProposals-field-text{
-//   font-size: $almostNormalSize;
-//   display: block;
-// }
-
-
-
-
-
 .postData-container{
   position: relative;
   margin-bottom: 3rem;
@@ -716,9 +684,6 @@ Profile Section
   margin-bottom: 3rem;
 }
 
-// .avilability-info-text{
-//   margin-bottom: 0.5rem;
-// }
 
 /*-----------------
 Production Section
@@ -750,8 +715,7 @@ Production Section
 }
 
 .multimedia-container .video-production-container iframe{
-  // height: 25.5rem;;
-  // width: 718px;
+
   width: 100%;
   height: 25.5rem;
   display:block;
@@ -761,7 +725,6 @@ Production Section
     height: -webkit-calc(100vw * 0.57);
     height: calc(100vw * 0.57);
   }
-  // margin-left: 3.2rem;
 }
 
 
@@ -822,7 +785,6 @@ Production Section
 
 .images-title-box{
   border-bottom: 1px solid $grey-2;
-  // padding-top:1.5rem;
   padding-bottom:0.6rem; 
   width: 96%;
 }
@@ -837,7 +799,6 @@ Production Section
   position:relative;
   width: 100%;
   display: block;
-  // padding: 0.5rem;
 }
 
 .image-production-container{
@@ -889,9 +850,7 @@ Production Section
   font-size: $almostNormalSize;
 }
 
-// .multimedia-accepted-list li{
-//   margin-top:0.5rem;
-// }
+
 
 .cloudinary_fileupload{
   margin-bottom: 1.5rem;
@@ -901,11 +860,7 @@ Production Section
   margin-bottom: 0.7rem;
 }
 
-// .bandcamp-audioPlayer{
-// border: 0;
-// width: 100%; 
-// height: 120px;
-// }
+
 
 #inline_player.inline_player{
   max-width: 100%;
@@ -974,7 +929,46 @@ CALL PAGE
 .call-section{
   background: white;
   padding: $inner-spacing;
+  position: relative;
 }
+
+.switcher-menu-call-page{
+  top: 0.25rem;
+  position: absolute;
+  right: 0.25rem;
+  
+}
+
+.menu.simple.tabs-menu.switcher-menu-call-page li{
+  /* border-right: 1px solid $grey-3; */
+  border-bottom: 1px solid $grey-3;
+  border-left: 1px solid $grey-3;
+  @include border-radius($element-border-radius);
+  padding: 0.5rem; 
+
+}
+
+
+.tab-selected{
+  /* background: $grey-1; */
+  font-weight: bold;
+}
+
+/* .switcher-menu-call-page li.tab-selected{
+  border-bottom: 2px solid $grey-3 !important;
+  border-left: 2px solid $grey-3;
+  box-shadow: -1px 1px 2px $grey-3;
+} */
+
+.menu.simple.tabs-menu li{
+  margin-right:0.25rem;
+}
+
+.tabs-menu li{
+  padding: 1rem 1.5rem;
+  cursor: pointer;
+}
+
 
 .checkBox-call-manager{
   display: inline-block;
@@ -1005,7 +999,7 @@ td.column-call-manager-table{
 } 
 
 td.column-call-manager-table.column-link_orfheo{
-      min-width: 2rem;
+  min-width: 2rem;
 }
 
 td.column-call-manager-table.column-description, td.column-call-manager-table.column-needs, td.column-call-manager-table.column-short_description, td.column-call-manager-table.column-own, td.column-call-manager-table.column-un_wanted, td.column-call-manager-table.column-amend, td.column-call-manager-table.column-sharing{
@@ -1048,7 +1042,6 @@ div.inputSpace-container .select2-selection.select2-selection--multiple, div.inp
 
 .types-selector-call-manager{
   margin-bottom: 1.5rem;
-  // margin-top: 2rem;
   width: 21rem;
   display: inline-block;
   margin-right: 3rem;
@@ -1057,7 +1050,6 @@ div.inputSpace-container .select2-selection.select2-selection--multiple, div.inp
 }
 
 .program-all-checkbox-container{
-  // margin-bottom: 1rem;
   display: inline;
 }
 
@@ -1067,24 +1059,6 @@ div.inputSpace-container .select2-selection.select2-selection--multiple, div.inp
 
 th.icon-column-call-table{
   width: 2rem;
-}
-
-.tab-selected{
-  background: $grey-1;
-}
-
-.menu.simple.tabs-menu li{
-  margin-right:0;
-}
-
-.tabs-menu li{
-  padding: 1rem 1.5rem;
-  cursor: pointer;
-}
-
-.tabs-menu{
-  margin-top: 2rem;
-  margin-bottom : 2rem;
 }
 
 .success-icon-check-call-manager{
@@ -1114,7 +1088,7 @@ th.icon-column-call-table{
 .submit-btn-outer-container-call-manager{
   position:relative;
   display: block;
-  min-height: 3rem;
+  min-height: 2rem;
   margin: 1rem; 
 }
 
@@ -1130,4 +1104,49 @@ th.icon-column-call-table{
   font-size: $almostNormalSize;
 }
 
+#tablePanel, #proposalsPanel {
+  margin-bottom: $pard-grid-spacing;
+}
 
+
+
+.add-proposal-box, .white-list-box{
+  display: inline-block;
+}
+
+.add-proposal-box{
+  width: 60%;
+  padding-right: 2rem;
+  /* border-right: 1px solid $grey-3; */
+  vertical-align: top;
+
+}
+
+.white-list-box{
+  width: 40%;
+  padding-left: 2rem;
+  border-left: 1px solid $grey-3;
+  vertical-align: top;
+
+}
+
+.input-whiteList-container{
+  font-size: 14px;
+  width: 92%;
+  display: inline-block;
+  margin-bottom: 0.5rem;
+}
+
+.input-whiteList-container input{
+  width: 200px !important;
+}
+
+/* .input-whiteList-container span{
+  max-height: 2.5rem;
+} */
+
+.add-whiteList-input-field{
+  width: 92%;
+  font-size: 12px;
+  margin-bottom: 0.2rem;
+}
