own proposal listed and shown in popup

--- a/assets/stylesheets/scss/_pages.erb.scss
+++ b/assets/stylesheets/scss/_pages.erb.scss
@@ -1188,4 +1188,18 @@ p.initial-text-proposalPanel{
   margin-bottom: 2rem;
 }
 
+.typeOwnproposal-icon-call-page{
+  margin-right: 1rem;
+}
+
+.buttonsCOntainer-call-page{
+  margin-bottom: 1.5rem;
+}
+
+.ownBox-call-manager{
+  display: inline-block;
+  width: 50%;
+  vertical-align:top;
+  padding: 0 1rem;
+}
 
